Expose the attributes of a ResourceDefinition as a static Collection<AttributeDefinition>.